--- a/Monopoly/Resources/MonopolySpaces.plist
+++ b/Monopoly/Resources/MonopolySpaces.plist
@@ -112,9 +112,9 @@
 		<key>rent</key>
 		<array>
 			<integer>25</integer>
-			<string>50</string>
-			<string>100</string>
-			<string>200</string>
+			<integer>50</integer>
+			<integer>100</integer>
+			<integer>200</integer>
 		</array>
 		<key>cost</key>
 		<integer>200</integer>
